2008-08-11  Arjen Markus <arjenmarkus@users.sourceforge.net>
	* special.tcl: replaced old algorithm for erf() and erfc() - bug #2024843

2008-07-01  Arjen Markus <arjenmarkus@users.sourceforge.net>
	* roman.man: corrected wrong mark-up command

2008-06-25  Arjen Markus <arjenmarkus@users.sourceforge.net>
	* calculus.tcl: solved problem with solveTriDiagonal (bug 2001539)
	* calculus.tcl: repaired hidden problem with boundaryValueSecondOrder
	* calculus.test: added test case for solveTriDiagonal

2008-05-19  Arjen Markus <arjenmarkus@users.sourceforge.net>
	* roman.man: correct namespace ::math::roman, was ::roman.

2008-03-24  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* pkgIndex.tcl: Synchronized indexed and provided versions of
	* bigfloat.man: math::bigfloat.

2008-03-22  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* constants.test: Fixed declaration of package under test, was
	  wrongly declared as support.

2008-03-14  Andreas Kupries  <andreask@activestate.com>

	* statistics.man: Cleaned up a bit, replaced deprecated [nl] usage
	  with [para].

2008-02-27  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* linalg.test (eigenvectors-1.0): Moved brace to correct location.

2008-02-27  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* linalg.test (eigenvectors-1.0): Fixed missing closing brace.

2008-02-21  Arjen Markus <arjenmarkus@users.sourceforge.net>
	* elliptic.tcl: Error in expression (missing ))

2008-01-18  Arjen Markus <arjenmarkus@users.sourceforge.net>
	* statistics.man: Update manual; added beta distribution
	* statistics.test: Added tests for beta distribution
	* pdf-stat.tcl: Added procedures for beta distirbution
	                (Improved implementation by Eric K. Benedict)

2008-01-13  Arjen Markus <arjenmarkus@users.sourceforge.net>

	* statistics.man: Update manual; added description of various new procedures
	* statistics.test: Added tests for chi square and Student's t distributions