@@ -1,3 +1,7 @@
+2008-08-12  Arjen Markus <arjenmarkus@users.sourceforge.net>
+	* special.tcl: bumped version to 0.2.2 (because of previous change)
+	* pkgIndex.tcl: bumped version of "special" to 0.2.2 
+
 2008-08-11  Arjen Markus <arjenmarkus@users.sourceforge.net>
 	* special.tcl: replaced old algorithm for erf() and erfc() - bug #2024843
 
